Add a datapoint api index endpoint (#160)
* Datapoint index API and refactored specs

Update swagger api definition

* Return validation errors in js
